# my_dataproc

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
docs/source/: conf.py  getting_started.rst  index.rst
src/my_dataproc/: __init__.py  transform.py
tests/: test_transform.py
